fix modal z-index for #759

--- a/src/nyc_trees/sass/partials/_variables.scss
+++ b/src/nyc_trees/sass/partials/_variables.scss
@@ -306,6 +306,7 @@ $dropdown-caret-color:           #000;
 //
 // Note: These variables are not generated into the Customizer.
 
+$zindex-modal:             4000;
 $zindex-main-header:       3000;
 $zindex-navbar:            1000;
 $zindex-dropdown:          1000;
